<resources>
    <string name="app_name">MyTrip</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_trip">My Trip List</string>
    <string name="title_activity_default_search">Add Trip Info</string>
    <string name="selected">Selected:&#160;</string>
    <string name="clear_all"><u>Reset</u></string>
    <string name="title_activity_my_trip_list">My Trips List</string>
    <string name="insert_success">Trip info has been successfully saved.</string>
    <string name="insert_failed">Something went wrong!! Failed to save trip info</string>
    <string name="no_trip_data">Trip data are not available. Please click plus button below to add trip data</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_date">Start Date:&#160;</string>
    <string name="start_time">Start Time:&#160;</string>
    <string name="end_date">End Date:&#160;</string>
    <string name="end_time">End Time:&#160;</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm_msg">Are you sure you want to delete your trip data?</string>
    <string name="delete">Delete</string>
    <string name="delete_trip_success_msg">The selected trip info has been successfully deleted from the database.</string>
    <string name="close_button">close button</string>
    <string name="from_hint">Search start location</string>
    <string name="to_hint">Search destination location</string>
    <string name="update_success">Trip Info has been successfully updated</string>
    <string name="update_failed">Something went wrong !! Failed to update trip info.</string>
    <string name="start_add_required">Start Address required</string>
    <string name="start_time_required">Trip Start time required. Please click the calendar icon(below From input box) to add.</string>
    <string name="dest_add_required">Destination Address required</string>
    <string name="end_time_required">Trip End time required. Please click the calendar icon(below To input box) to add.</string>
    <string name="sync_all_success">Sync All Success</string>
    <string name="sync_all_failed">Sync All Failed</string>
    <string name="sync_create_success">Sync Create Trip Info Success</string>
    <string name="sync_create_failed">Sync Create Trip Info Failed</string>
    <string name="sync_update_success">Sync Update Trip Info Success</string>
    <string name="sync_update_failed">Sync Update Trip Info Failed</string>
    <string name="sync_delete_success">Sync Delete Trip Info Success</string>
    <string name="sync_delete_failed">Sync Delete Trip Info Failed</string>
    <string name="error_occured">An error occurred:</string>
    <string name="place">Place:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="change_server">Change Server</string>
    <string name="permission_denied">Permission denied</string>
</resources>
