<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddMyTripActivity"
    tools:showIn="@layout/activity_add_my_trip">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_200"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginHorizontal="@dimen/dimen_8"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/dimen_2"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/dimen_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/nice_spinner"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:layout_centerVertical="true"
                    android:text="@string/change_server" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/nice_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_45"
                    android:background="@color/white_bg"
                    android:layout_marginEnd="@dimen/dimen_5"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/from"/>

            <EditText
                android:id="@+id/et_from"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45"
                android:hint="@string/from_hint"
                android:paddingStart="@dimen/dimen_10"
                android:autofillHints="@string/from_hint"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:id="@+id/tv_from_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_2"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"/>

                <TextView
                    android:id="@+id/tv_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/to"/>

            <EditText
                android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45"
                android:hint="@string/to_hint"
                android:paddingStart="@dimen/dimen_10"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:id="@+id/tv_to_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_2"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"/>

                <TextView
                    android:id="@+id/tv_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/dimen_5"
                android:textStyle="bold|italic"
                android:visibility="gone"
                android:text="@string/clear_all"
                android:textColor="@color/danger"/>

            <Button
                android:id="@+id/btn_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_25"
                android:layout_marginBottom="@dimen/dimen_16"
                android:background="@drawable/btn_rounded_corner"
                android:text="Submit"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>